# Otus.Cpp.Homework14

./: .travis.yml  CMakeLists.txt  MapFunctor.cpp  MapFunctor.h  README.md  ReduceFunctor.cpp  ReduceFunctor.h  functions.cpp  functions.h  main.cpp  map_reduce_framework.cpp  map_reduce_framework.h
tests/: CMakeLists.txt  check_input_parameters.cpp  map_reduce_min_prefix.cpp
